[package]
name = "portfolio-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4"] }
image = "0.24"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dotenvy = "0.15"
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
